--- a/Day_02/style.css
+++ b/Day_02/style.css
@@ -36,8 +36,15 @@ h2{
 .buttons{
 	display: flex;
 	justify-content: space-between;
+	
+}
+.buttons a{
+	text-decoration: none;
 }
 .button{
-	background-color: blue;
+	padding: 5px;
+	border-radius: 5px;
+	background-color: green;
 	color: white;
+	box-shadow: rgb(74, 10, 223) 0px 10px 20px -4px;
 }
