All exercises of 5th day were done.

--- a/Day_05/style.css
+++ b/Day_05/style.css
@@ -15,7 +15,9 @@ body{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin: 50px 300px;
+	margin: 5% 20%;
+	min-width: fit-content;
+	min-height: fit-content;
 }
 .subject{
 	color: darkkhaki;
